--- a/src/VisualStudio.PowerShell/packages.config
+++ b/src/VisualStudio.PowerShell/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.6.27740" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.LanguageServer.Client" version="1.1.6-pre" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.LanguageServer.Protocol" version="1.1.6-pre" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.LanguageServer.Client" version="15.8.3057" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.LanguageServer.Protocol" version="15.8.3057" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Threading" version="15.7.21" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.21" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.7.27703" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.58" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net461" />
   <package id="StreamJsonRpc" version="1.3.23" targetFramework="net461" />
 </packages>
